--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ android {
 
 dependencies {
 
+    //cardview
+    implementation("androidx.cardview:cardview:1.0.0")
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
