--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,46 +14,53 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Organeco"
         tools:targetApi="31">
-        
-      <activity
-            android:name=".CalculatorActivity"
+        <activity
+            android:name=".view.activity.home.HomeActivity"
+            android:exported="false"
+            android:label="@string/title_home">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".view.activity.calculator.CalculatorActivity"
             android:exported="false" />
         <activity
-            android:name=".view.profile.ProfileActivity"
+            android:name=".view.activity.profile.ProfileActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".view.start.StartedActivity"
+            android:name=".view.activity.start.StartedActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".view.start.OnboardingActivity"
+            android:name=".view.activity.start.OnboardingActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".view.MainActivity"
+            android:name=".view.activity.MainActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".view.login.LoginActivity"
+            android:name=".view.activity.login.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".view.register.RegisterActivity"
+            android:name=".view.activity.register.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".view.start.SplashScreenActivity"
+            android:name=".view.activity.start.SplashScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
