--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,9 +13,8 @@
         android:theme="@style/Theme.Organeco"
         tools:targetApi="31">
         <activity
-            android:name=".view.activity.home.HomeActivity"
-            android:exported="false"
-            android:label="@string/title_home">
+            android:name=".view.activity.DetailActivity"
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -54,10 +51,10 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".view.activity.login.LoginActivity"
+            android:name=".view.activity.auth.login.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".view.activity.register.RegisterActivity"
+            android:name=".view.activity.auth.register.RegisterActivity"
             android:exported="false" />
         <activity
             android:name=".view.activity.start.SplashScreenActivity"
@@ -73,5 +70,7 @@
                 android:value="" />
         </activity>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
