--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Organeco"
         tools:targetApi="31">
         <activity
+            android:name=".view.activity.CekSubsidi.CekSubsidiActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.result.ResultActivity"
             android:exported="false">
             <meta-data
