--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".view.activity.DetailActivity"
+            android:name=".view.activity.detail.DetailActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
