--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Organeco"
         tools:targetApi="31">
         <activity
-            android:name=".view.activity.HumidityActivity"
+            android:name=".view.activity.humadity.HumidityActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
