--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,9 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_foreground"
         android:supportsRtl="true"
         android:theme="@style/Theme.Organeco"
-        tools:targetApi="31"><activity
-        android:name=".view.activity.CekSubsidi.CekSubsidiActivity"
-        android:exported="false" />
+        tools:targetApi="31">
+        <activity
+            android:name=".view.activity.CekSubsidi.CekSubsidiActivity"
+            android:exported="false" />
 
         <activity
             android:name=".view.activity.moisture.MoistureActivity"
@@ -25,7 +24,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".view.result.ResultActivity"
+            android:name=".view.activity.result.ResultActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -93,5 +92,7 @@
                 android:value="" />
         </activity>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
